Fix bug when there was always a space for a scrollbar in popup

--- a/app/Popup.css
+++ b/app/Popup.css
@@ -15,6 +15,8 @@
   height: var(--popup-height);
   border-top: 1px solid transparent;
   box-sizing: border-box;
+  overflow-x: scroll;
+  overflow-y: hidden;
 }
 
 
